--- a/boiler-server/package.json
+++ b/boiler-server/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "backend": "nodemon index.js",
+		"dev": "concurrently \"npm run backend\" \"cd ../boiler-client && npm run start\""
   },
   "author": "songcs0329",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "concurrently": "^6.4.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
